<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teamwork</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_message_arrived">You have %d new message</string>

    <!-- Activity names -->
    <string name="contacts">Contacts</string>
    <string name="projects">Projects</string>
    <string name="project">Project</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="messages">Messages</string>
    <string name="contact_information">Contact Information</string>

    <!-- Contact info. activity -->
    <string name="strViewAll">View All</string>
    <string name="recent_conversations">Recent Conversations:</string>
    <string name="projects_to_see">Projects:</string>
    <string name="send_message">Send Message</string>
    <string name="search">Search:</string>
    <string name="department">Department:</string>
    <string name="people">People:</string>
    <string name="recent_activity">Recent activity</string>

    <!-- Register activity -->
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">Teamwork</string>
    
    <string name="number_of_participants">%d participant(s)</string>
    <string name="number_of_tags">%1$s +%2$d tag(s)</string>
    <string name="number_of_files">%1$d file(s)</string>
    <string name="number_of_common_projects">%1$d common projects</string>

</resources>
